# Blockchain-bot

./: .env  BOT_STATUS.md  Cargo.toml  Cargo.toml.bak  Cargo.toml.broken  README.md  StrategyEngine.rs  build.rs  check-status.ts  competitor_capital_tracker.rs  config.toml  correlation_breakdown_protector.rs  cpu_affinity_optimizer.rs  decentralized_vault_network.rs  delta_neutral_portfolio_manager.rs  ed25519_batch_verifier.rs  fair_launch_sniper.rs  frontrun_flashloan_weaponizer.rs  gamma_squeeze_detector.rs  garch_volatility_forecaster.rs  generate-wallet.ts  governance_proposal_trader.rs  graph_neural_network_flow_analyzer.rs  inventory_risk_optimizer.rs  jito_relay_slot_manipulator.rs  main.rs  martingale_strategy_optimizer.rs  memory_mapped_transactions.rs  merkle_proof_prefetcher.rs  meteora_dlmm_exploiter.rs  minimal-bot.ts  neural_latency_predictor.rs  numa_aware_threading.rs  ornstein_uhlenbeck_mean_reverter.rs  package.json  probabilistic_state_tree.rs  pyth_price_flashloan_manipulator.rs  quantum_resistant_bundle_encryptor.rs  queue_position_optimizer.rs  rival_bot_capability_scorer.rs  (+10 more)
accounting/: tax_basis_tracker.rs
advanced_cryptography/: homomorphic_bundle_encryptor.rs  ring_signature_mixer.rs
ai_models/: train_pnl_predictor_lstm_v2.py  train_tip_optimizer.py
alpha_obfuscation/: adversarial_move_predictor.rs  adversary_strategy_fingerprinter.rs  competitor_strategy_decoder.rs  decoy_transaction_generator.rs  profit_obfuscation_mixer.rs
analytics/: realized_vol_calculator.rs  (+4 more)
scr/: Cargo.toml  lib.rs  zk_slot_commitment_verifier.rs
scr/adaptive_ai/: lstm_market_regime_classifier.rs
scr/adaptive_order_sizer/: adaptive_order_sizer.rs
scr/advanced_backtesting/: mod.rs  monte_carlo_simulator.rs
scr/advanced_order_types/: vwap_optimizer.rs
scr/ai/: ensemble_model_aggregator.rs  transformer_price_predictor.rs
scr/alpha_obfuscation/: competitor_latency_estimator.rs  flow_toxicity_scorer.rs  multi_wallet_identity_mixer.rs  time_priority_exploiter.rs  trade_pattern_noise_injector.rs
scr/amm_formula_exploiter/: amm_formula_exploiter.rs
scr/analysis/: bot_behavior_classifier.rs
scr/analytics/: cointegration_pair_finder.rs  competitive_edge_scoring_engine.rs  factor_attribution_engine.rs  informed_trader_detector.rs  pnl_tax_calculator.rs  strategy_pnl_decomposer.rs  tick_cluster_analyzer.rs
scr/bare_metal/: kernel_bypass.rs  mod.rs
scr/bot_detection/: mod.rs
scr/bundle_collision_predictor/: bundle_collision_predictor.rs
scr/capital_velocity_maximizer/: capital_velocity_maximizer.rs
scr/constants/: raydium_discriminators.rs
scr/core/: config_manager.rs  mod.rs  risk_manager.rs
scr/crisis_alpha_extractor/: crisis_alpha_extractor.rs
scr/dynamic_hotswap/: runtime_strategy_injector.rs
scr/execution/: cold_vault_manager.rs  compute_unit_optimizer.rs  multi_sig_treasury.rs  profit_sweeper.rs
scr/execution_safety/: adversarial_bundle_analyzer.rs  multi_threshold_risk_controller.rs  real_time_drawdown_circuit_breaker.rs  transaction_revert_predictor.rs
scr/execution_shortfall_minimizer/: execution_shortfall_minimizer.rs
scr/flashloan_advanced/: MultiProtocolFlashLoanAggregator.rs
scr/flashloan_mathematical_supremacy/: ito_process_flashloan_modeler.rs
scr/flashloan_mev_apocalypse/: mod.rs  sandwich_flashloan_maximizer.rs
scr/flashloan_nuclear_arsenal/: fusion_protocol_combiner.rs
scr/infrastructure/: custom_rpc_endpoints.rs  mod.rs  network_topology_mapper.rs
scr/intent_mesh/: intent_collision_profit_maximizer.rs  pre_execution_intent_harvester.rs
scr/jito_economics/: compute_unit_auction_engine.rs  slot_auction_bidder.rs  slot_congestion_tip_predictor.rs  validator_latency_profiler.rs
scr/jump_diffusion_arbitrageur/: jump_diffusion_arbitrageur.rs
scr/leverage_cascade_calculator/: leverage_cascade_calculator.rs
scr/market_making/: avellaneda_stoikov_mm_engine.rs
scr/mempool/: mod.rs
scr/micro_price_movement_predictor/: micro_price_movement_predictor.rs
scr/ml_feedback_loop/: dqn_strategy_reward_optimizer.rs  real_time_pnl_feature_extractor.rs
scr/monitoring/: health_monitor.rs  mod.rs  real_time_pnl_dashboard.rs
scr/nanosecond_execution/: mod.rs  zero_copy_deserialization.rs
scr/network/: ebpf_packet_filter.rs  multipath_redundancy_manager.rs  quic_bundle_transport.rs
scr/on_chain_momentum_detector/: on_chain_momentum_detector.rs
scr/orderbook_liquidity_detector/: orderbook_liquidity_detector.rs
scr/packet_route_optimizer/: packet_route_optimizer.rs
scr/portfolio/: capital_allocation_optimizer.rs  multi_strategy_portfolio_manager.rs  sharpe_ratio_maximizer.rs
scr/quantum_alpha_signal/: entanglement_based_correlation_finder.rs
scr/quantum_flashloan_supremacy/: quantum_annealing_profit_maximizer.rs  quantum_tunneling_executor.rs
scr/risk/: adverse_selection_detector.rs  drawdown_constrained_sizer.rs  fractional_kelly_adjuster.rs  portfolio_heat_manager.rs  slippage_tolerance_optimizer.rs
scr/rpc/: rpc_load_balancer.rs
scr/security/: anti_phishing_shield.rs
scr/smart_contract_deployment_analyzer/: smart_contract_deployment_analyzer.rs
scr/solana_flashloan_domination/: mod.rs  solend_kamino_port_optimizer.rs
scr/speculative_execution_engine/: speculative_execution_engine.rs
scr/speed_of_light_calculator/: speed_of_light_calculator.rs
scr/stochastic_domination/: mod.rs  monte_carlo_tree_searcher.rs
scr/strategies/: black_swan_profiteer.rs  gamma_scalping_engine.rs  leverage_cascade_optimizer.rs  maker_taker_fee_arbitrageur.rs
scr/strategy_modeling/: stackelberg_game_solver.rs
scr/tensor_calculus_trading/: geodesic_path_finder.rs  geodesic_path_finder.rs.orig  geodesic_path_finder.rs.rej
scr/token_unlock_schedule_trader/: token_unlock_schedule_trader.rs
scr/topology_exploitation/: hypercube_path_optimizer.rs  mod.rs
scr/ultra_low_latency/: memory_mapped_state_cache.rs  mod.rs  solana_cuda_kernels.cu  zero_copy_bundle_constructor.rs
scr/utils/: transaction_simulation_cache.rs
scr/wallet/: mod.rs  multi_sig_implementation.rs
scr/zero_knowledge/: safe-circuit-witness.json
(+272 files in other folders)
