[package]
name = "solana-mev-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "1.16.1"
solana-sdk = "1.16.1"
solana-client = "1.16.1"
spl-associated-token-account = "1.1.1"
spl-token = { version = "3.4.1", features = ["no-entrypoint"] }
spl-token-2022 = "0.6.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-transaction-status = "2.3.5"
uuid = { version = "1.0", features = ["v4"] }
# jito-tip-distribution-sdk = { path = "jito-sdk/programs/sdk" }
# raydium-sdk = { git = "https://github.com/raydium-io/raydium-sdk-V2", branch = "master" }
# orca-whirlpool-sdk = { git = "https://github.com/orca-so/whirlpools", package = "whirlpool-sdk", branch = "main" }
[workspace]
members = [
	"programs/*",
]
exclude = [
	"deps/serum-dex"
]

[profile.release]
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[dev-dependencies]
ark-std = "0.4"
proptest = "1.4"
criterion = "0.5"

[build-dependencies]
rustc_version = "0.4"

[features]
default = []
enhanced-security = []
profiling = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.test]
opt-level = 1
debug = true
overflow-checks = true

[[bin]]
name = "whale_wallet_behavioral_fingerprinter"
path = "whale_wallet_behavioral_fingerprinter.rs"

[[bench]]
name = "verification_benchmark"
harness = false

